Image stretching issue

--- a/src/containers/sidebars/dashboard-sidebar/species-info/species-info-styles.module.scss
+++ b/src/containers/sidebars/dashboard-sidebar/species-info/species-info-styles.module.scss
@@ -23,6 +23,7 @@
       width: 130px;
       height: 130px;
       margin-top: 8px;
+      object-fit: cover;
     }
 
     .info{
